--- a/studio-rhizom/package.json
+++ b/studio-rhizom/package.json
@@ -7,9 +7,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^4.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "vite": "^4.0.0",
     "vue": "^3.2.0",
-    "@vitejs/plugin-vue": "^4.0.0",
     "vue-router": "^4.1.0"
   }
 }
