--- a/studio-rhizom/package.json
+++ b/studio-rhizom/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@vitejs/plugin-vue": "^4.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
