mise a jour pour le backend

--- a/studio-rhizom/public/data/projects.json
+++ b/studio-rhizom/public/data/projects.json
@@ -1,7 +1,14 @@
 [
   {
-    "title": "Installation Florale au Palais",
-    "image": "/assets/palais.jpg",
-    "description": "Une composition suspendue contemporaine..."
+    "title": "byredo",
+    "image": "/images/projets/byredo_05032024_nikitashubnyi_004.jpg"
+  },
+  {
+    "title": "byredo 07032025 nikitashubnyi 002 (1)",
+    "image": "/images/projets/byredo_07032025_nikitashubnyi_002 (1).jpg"
+  },
+  {
+    "title": "byredo 07032025 nikitashubnyi 012",
+    "image": "/images/projets/byredo_07032025_nikitashubnyi_012.jpg"
   }
 ]
