Fix backend Dockerfile path

--- a/site-rhizom/docker-compose.yml
+++ b/site-rhizom/docker-compose.yml
@@ -2,11 +2,18 @@ version: '3.8'
 services:
   backend:
     build:
-      context: .
-      dockerfile: docker/Dockerfile.backend
-    env_file: backend/.env
+      context: ./backend
+      dockerfile: Dockerfile
+    env_file:
+      - ./backend/.env
     ports:
       - "3001:3001"
     working_dir: /app
     command: ["node", "server.js"]
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
