--- a/site-rhizom/backend/.env.example
+++ b/site-rhizom/backend/.env.example
@@ -5,3 +5,5 @@ SMTP_USER=username@example.com
 SMTP_PASS=password
 DEST_EMAIL=dest@example.com
 ADMIN_EMAIL=admin@example.com
+ADMIN_USER=admin
+ADMIN_PASS=motDePasseAdmin
