--- a/site-rhizom/backend/package.json
+++ b/site-rhizom/backend/package.json
@@ -9,7 +9,9 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "nodemailer": "^6.9.10",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "better-sqlite3": "^8.4.0",
+    "multer": "^1.4.5"
   }
 }
 
