--- a/site-rhizom/frontend/package.json
+++ b/site-rhizom/frontend/package.json
@@ -6,6 +6,9 @@
     "build": "vite build",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "axios": "^1.6.0"
+  },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
     "@vitejs/plugin-vue": "^4.0.0",
