--- a/site-rhizom/backend/package.json
+++ b/site-rhizom/backend/package.json
@@ -6,10 +6,11 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "better-sqlite3": "^12.2.0",
     "body-parser": "^1.20.2",
-    "nodemailer": "^6.9.10",
-    "dotenv": "^16.3.1"
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.10"
   }
 }
-
