ajout de la page admin, upload ok mais probleme daffichage sur le frontend

--- a/site-rhizom/backend/Dockerfile
+++ b/site-rhizom/backend/Dockerfile
@@ -4,4 +4,5 @@ COPY package*.json ./
 RUN npm install --production
 COPY . ./
 RUN mkdir -p /app/data
+RUN mkdir -p /app/public/images
 CMD ["node", "server.js"]
