affichage du carousel operationnel et suppression et ajout via admin ok, faire la meme chose pour les projets

--- a/site-rhizom/docker-compose.yml
+++ b/site-rhizom/docker-compose.yml
@@ -11,7 +11,8 @@ services:
     working_dir: /app
     command: ["node", "server.js"]
     volumes:
-      - ./backend/data:/app/data  # <- Monte le dossier local ./backend/data dans /app/data du conteneur
+      - ./backend/data:/app/data # <- Monte le dossier local ./backend/data dans /app/data du conteneur
+      - ./backend/public/images:/app/public/images
 
   frontend:
     build:
